<resources>
    <string name="app_name">TAM-2-calculadora-Radiobutton</string>
    <string name="calcular">Calcular</string>
    <string name="Sumar">Sumar</string>
    <string name="Restar">Restar</string>
    <string name="Multiplicar">Multiplicar</string>
    <string name="Dividir">Dividir</string>
    <string name="Potencia">Potencia</string>
    <string name="numero">ingrese un numero</string>
    <string name="Resultado">Resultado</string>
</resources>